# interposition

./: .gitignore  CMakeLists.txt  Makefile  interposition.cpp
tests/: CMakeLists.txt  file.cpp  fopen_test.cpp  open_test.cpp  posix_tests.cpp
